k8s/test-app/namespace.yaml
# k8s/test-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-app
  labels:
    name: test-app
